--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
 <head>
 	<meta charset="UTF-8">
-	<title>Vue Battle</title>
+	<title>无尽的对砍</title>
 	<script src="src/vue.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="src/pure.min.css" />
 	<link rel="stylesheet" type="text/css" href="src/app.css" />
@@ -209,5 +209,10 @@
 	</div>
 </div>
 <script src="src/app.min.js"></script>
+<!--客服 开始-->
+<script src="//likexia.gitee.io/game/js/jquery.min.js"></script>
+<link rel="stylesheet" href="//likexia.gitee.io/game/css/kf.css" type="text/css" media="screen" charset="utf-8">
+<script src="//likexia.gitee.io/game/js/kf.js"></script>
+<!-- 客服 结束 -->
 </body>
 </html>
